--- a/workoutapp-frontend/workoutapp-angular/angular.json
+++ b/workoutapp-frontend/workoutapp-angular/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free"
             ],
             "scripts": []
           },
